# GLRF

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  sh.exe.stackdump
GLRF/: App.cpp  App.h  ImageUtil.cpp  Material.cpp  Material.h  Material.hpp  PlaneGenerator.cpp  PlaneGenerator.h  Scene.cpp  Scene.h  Scene.hpp  SceneCamera.cpp  SceneCamera.h  SceneCamera.hpp  SceneLight.cpp  SceneLight.h  SceneLight.hpp  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  VectorMath.cpp  VectorMath.h  VectorMath.hpp  VertexFormat.cpp
app/: App.cpp  CMakeLists.txt
include/GLRF/: App.hpp  AppFrame.hpp  Camera.hpp  FrameBuffer.hpp  Material.hpp  MathUtil.hpp  PlaneGenerator.hpp  Scene.hpp  SceneCamera.hpp  SceneLight.hpp  SceneObject.hpp  Shader.hpp  Texture.hpp  VectorMath.hpp  VertexFormat.hpp
shaders/: base.frag  base.vert  displace.frag  displace.vert  gauss.frag  gauss.vert  gouraud.frag  gouraud.vert  hdr.frag  parallax.frag  parallax.vert  phong.frag  phong.vert  simple.frag  simple.vert  toon.frag  toon.vert
src/: AppFrame.cpp  Camera.cpp  FrameBuffer.cpp  IdManager.cpp  Material.cpp  PlaneGenerator.cpp  Scene.cpp  SceneCamera.cpp  SceneLight.cpp  SceneObject.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  VectorMath.cpp  VertexFormat.cpp
test/: CMakeLists.txt  CameraTest.cpp  PlaneGeneratorTest.cpp  SceneCameraTest.cpp  SimpleTest.cpp
textures/: Ground.sbs
